:sparkles: :recycle: tsanalysis manager added resolves #57
