# querier/app/v1/querier/models/QueryResponse.scala
@@ -3,6 +3,7 @@ package v1.querier.models
 import play.api.libs.json._
 
 import java.time.LocalDateTime
+import scala.collection.mutable
 
 /**
  * Response representing a serie which belongs to a sensor
@@ -21,7 +22,8 @@ import java.time.LocalDateTime
  * @param measureDescr description of the measures
  * @param tags list tags related to the sensor
  * @param coordinates coordinates where the sensor is placed
- * @param series Double,Timestamp in ISO UTC time representing the temporal series
+ * @param timestamps list of timestamps same size as values
+ * @param values 
  * @param stats statistical information about the serie (average, standard deviation...)
  * @param subsequences list of subsequences which are significant to the query
  */
@@ -41,9 +43,10 @@ case class QueryResponse(seriesId: String,
                           measureDescr: String,
                           tags: Seq[String],
                           coordinates: Seq[String],
-                          series: Series,
+                          timestamps: Seq[String],
+                          values: Seq[BigDecimal],
                           stats: Seq[(String, String)],
-                          subsequences: Seq[Subsequence] = Seq.empty
+                          subsequences: mutable.Seq[Subsequence] = mutable.Seq.empty
                         ){
 
   def toJson(): JsObject = {
@@ -62,7 +65,8 @@ case class QueryResponse(seriesId: String,
       "measureUnit" -> measureUnit,
       "measureDescr" -> measureDescr,
       "tags" -> Json.arr(tags),
-      "timeSeries" -> series.series,
+      "timestamps" -> Json.arr(timestamps),
+      "values" -> Json.arr(values),
       "stats" -> stats.map( stat => Json.obj(
         "name" -> stat._1,
         "value" -> stat._2
@@ -71,7 +75,6 @@ case class QueryResponse(seriesId: String,
         Json.obj(
           "ed" -> sub.ed,
           "start"-> sub.start,
-          "end" -> sub.end
         )
       })
     )
@@ -86,9 +89,8 @@ object QueryResponse{
  * Subsequence relative to the
  * @param ed euclidean distance to the query subsequence
  * @param start start of the subsequence in the series array
- * @param end end of the subsequence in the series array.
  */
-case class Subsequence(ed: Double, start: Long, end: Long){
+case class Subsequence(ed: Double, start: Long){
 
 }
 
