# querier/docs/querierAPIspec.yaml
@@ -146,10 +146,10 @@ components:
       properties:
         equality:
           type: boolean
-          description: true if searching equal subsequences false otherwise
+          description: true if searching equal subsequences false otherwise. NO IMPLEMENTADA OPCIÓN FALSA
         normalization:
           type: boolean
-          description: Normalización o no de la consulta. Verdadero por defecto
+          description: Normalización o no de la consulta. Verdadero por defecto. NO IMPLEMENTADA OPCIÓN FALSA
         subsequence:
           type: array
           description: Subsecuencia de valores ordenados de manera que el item en la posicion 0 se corresponde con el instante 0 de la subsecuencia
@@ -204,16 +204,15 @@ components:
               description: Coordinadas en latitud longitud
               items:
                 type: string
-            timeSeries:
+            timestamps:
               type: array
               items:
-                type: object
-                properties:
-                  timestamp:
-                    type: string
-                    format: date-time
-                  measure:
-                    type: number
+                type: string
+                format: date-time
+            values:
+              type: array
+              items:
+                type: number
             subsequences:
               type: array
               description: Subsecuencias de la serie temporal si se ha dado una subsecuencia para buscar
